--- a/render.yaml
+++ b/render.yaml
@@ -22,6 +22,9 @@ services:
     #
     # You can define additional environment variables as needed.
     envVars:
+       - key:WEBHOOK_URL
+         value:https://n8n-service-e9zy.onrender.com
+       
       # Generates a base64-encoded key for
       # encrypting credentials in n8n
       #
